--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tokio-util = { version = "0.7.0", features = ["io"], optional = true }
 tracing = "0.1"
 tracing-subscriber = "0.2.0"
 hyper-rustls = "0.23.1"
+hyper = {version="0.14.23",features=["full"]}
