--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ tracing = "0.1"
 tracing-subscriber = "0.2.0"
 hyper-rustls = "0.23.1"
 hyper = {version="0.14.23",features=["full"]}
+rustyline = "10.0.0"
+rustyline-derive = "0.7.0"
+env_logger = "0.9.3"
+url = "2.3.1"
