--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ hyper-rustls = "0.23.1"
 hyper = {version="0.14.23",features=["full"]}
 rustyline = "10.0.0"
 rustyline-derive = "0.7.0"
-env_logger = "0.9.3"
 url = "2.3.1"
 yaml-rust = "0.4"
+log = "0.4.0"
