--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,8 @@ rustyline-derive = "0.7.0"
 url = "2.3.1"
 yaml-rust = "0.4"
 log = "0.4.0"
+hyper-native-tls = { version="0.3.0"}
+reqwest = { version = "0.11", features = ["json"] }
+
+[target.'cfg(target_family = "linux")']
+rustflags = ["-C", "link-arg=-fuse-ld=lld"]
