--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,9 @@ hyper-native-tls = { version="0.3.0"}
 reqwest = { version = "0.11", features = ["json"] }
 chrono = "0.4.23"
 colored = "2"
-
+flate2 = "1.0"
+syntect = "5.0"
+typed-html = "0.2.2"
 [dependencies.minus]
 version = "5.1.0"
 features = [
