--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ chrono = "0.4.23"
 colored = "2"
 flate2 = "1.0"
 syntect = "5.0"
-typed-html = "0.2.2"
+html5ever = "0.26.0"
 [dependencies.minus]
 version = "5.1.0"
 features = [
