--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ colored = "2"
 flate2 = "1.0"
 syntect = "5.0"
 html5ever = "0.26.0"
+prettify-js = "0.1.0"
 [dependencies.minus]
 version = "5.1.0"
 features = [
