--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,8 @@ flate2 = "1.0"
 syntect = "5.0"
 html5ever = "0.26.0"
 prettify-js = "0.1.0"
-rutie = "0.8.2"
+rutie = "0.8.4"
+serde_json = "1.0"
 [dependencies.minus]
 version = "5.1.0"
 features = [
