--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,10 @@ flate2 = "1.0"
 html5ever = "0.26.0"
 prettify-js = "0.1.0"
 serde_json = "1.0"
-rutie = "0.8.2"
+lazy_static = "1.4.0"
+sha2 = "0.10.6"
+[dependencies.rutie]
+path = "./rutie/"
 [dependencies.minus]
 version = "5.1.0"
 features = [
