--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ prettify-js = "0.1.0"
 serde_json = "1.0"
 lazy_static = "1.4.0"
 sha2 = "0.10.6"
+wildmatch = "2.1.1"
 [dependencies.rutie]
 path = "./rutie/"
 [dependencies.minus]
