--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ serde_json = "1.0"
 lazy_static = "1.4.0"
 sha2 = "0.10.6"
 wildmatch = "2.1.1"
+strsim = "0.10.0"
 [dependencies.rutie]
 path = "./rutie/"
 [dependencies.minus]
