--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ lazy_static = "1.4.0"
 sha2 = "0.10.6"
 wildmatch = "2.1.1"
 strsim = "0.10.0"
+futures = "0.3"
 [dependencies.rutie]
 path = "./rutie/"
 [dependencies.minus]
